--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "backbone": "1.3.1",
     "bootstrap": "3.3.6",
+    "codebird": "2.6.0",
     "jquery": "2.2.1",
     "react": "0.14.7",
     "react-dom": "0.14.7",
+    "twitter-node-client": "0.0.6",
+    "twitter-text": "1.13.4",
     "underscore": "1.8.3"
   },
   "devDependencies": {
